Release Notes
=============

==== Jena 2.5.5

Jar change:
    o lucene-core has been upgraded from lucene-core-2.0.0 to lucene-2.2.0.jar.

Typed literals:
    o Fixed bug in equality checking of instances of xsd:decimal.
    
==== Jena 2.5.4

Graph
    o Graph has grown a new method, getStatisticsHandler
    o null is an acceptable result
    o Graphs that extend GraphBase have this defined for them
    o It is intended for the ARQ optimiser optimising in-memory graphs

Assemblers
    o ContentAssembler now respects the fileManager property for external
      content.
    o withFullModel now does subclass closure (as it should have done)
    o the code for findSpecificType is now better

N3 & Turtle Writer
    o Correct writing nested bnodes with no properties to make strict Turtle.
    o No longer automatically add default namespace prefix. 
    
Reasoners
    o Added rebindAll() to FBRuleInfGraph    
    o Extended OWLMini/full to include validation of maxCardinality(1) over individuals
    o The (forward) deductions model is now preserved across rebind() operations 
      so that listeners on deductions models are safe
    o added now(?x) builtin to return the current xsd:dateTime
      
Misc
    o Extended ResourceFactory.createTypedLiteral to handle Calendar objects      

==== Jena 2.5.3

Statement.Util
    o The interface Statement has grown a Util class containing
      the three constants getSubject, getPredicate, and getObject,
      which are Map1 objects with the obvious meanings.

Assembler modification-and-fix
    o There was a bug with the behaviour of OntModelSpec assemblers.
      The "feature" that if a ja:OntModelSpec had no properties it
      was treated as an OntModelSpec constant name did not work,
      since the generalAssembler obligingly inferred properties for
      it.

      The behavior has changed (I hope for the better ...). Instead,
      an OntModelSpec is built by modifying the properties of [a copy